# MentalHealthChatbot

./: README.md  pyproject.toml
MentalHealthChatbot/: .gitignore
MentalHealthChatbot/docs/: Requirement.md
MentalHealthChatbot/src/: run_agent.py  streamlit_app.py
MentalHealthChatbot/src/agents/: demo_agent.py  graph.py  llama_guard.py  models.py
MentalHealthChatbot/src/agents/bg_task_agent/: task.py
MentalHealthChatbot/src/client/: client.py
MentalHealthChatbot/src/config/: credentials.json  token.json
MentalHealthChatbot/src/schema/: schema.py
MentalHealthChatbot/src/service/: service.py
MentalHealthChatbot/src/utils/: db.py  gmail.py  gmail_back.py  rag.py
docs/: Design.md
src/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  run_agent.py  self_rag_graph.py  start_web_app.py  streamlit_app.py  web_demo.py
src/agents/: __init__.py  check.py  counsellor.py  demo_agent.py  display_graph.py  nodes.py  research_assistant.py
src/service/: service.py
