[tool.poetry]
name = "mentalhealthchatbot"
version = "0.1.0"
description = ""
authors = ["su"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.28"
langgraph = "^0.2.60"
ipython = "^8.31.0"
langchain-anthropic = "^0.3.1"
langchain-aws = "^0.2.10"
langchain-google-genai = "^2.0.7"
langchain-groq = "^0.2.2"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"
numexpr = "^2.10.2"
duckduckgo-search = "^7.0.0"
streamlit = "^1.41.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
langgraph-checkpoint-sqlite = "^2.0.1"
langchain-google-community = {extras = ["gmail"], version = "^2.0.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
