[tool.poetry]
name = "mentalhealthchatbot"
version = "0.1.0"
description = ""
authors = ["su"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
quivr-core = "^0.0.26"
tensorflow = "^2.18.0"
ipython = "^8.31.0"
numexpr = "^2.10.2"
duckduckgo-search = "^7.2.0"
google-api-python-client = "^2.157.0"
google-auth-oauthlib = "^1.2.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
langgraph-checkpoint-sqlite = "^2.0.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
